--- a/themes/jtherczeg-grill-child/pages/samples/products.htm
+++ b/themes/jtherczeg-grill-child/pages/samples/products.htm
@@ -41,16 +41,16 @@ is_hidden = 0
             <div class="col-md-3 col-sm-6 mix portfolio-item Pizza">       
                 <div class="portfolio-wrapper">                
                     <div class="portfolio-thumb">
-                        <img src="{{ 'assets/images/product1.jpg'|theme }}" alt="">
+                        <img src="{{ 'assets/images/book1.jpg'|theme }}" alt="">
                             <div class="hover">
                                 <div class="hover-iner">
-                                    <a class="fancybox" href="{{ 'assets/images/product1_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                                    <span>Pizza</span>
+                                    <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                                    <span>DVD</span>
                                 </div>
                     </div>
                 </div>  
                 <div class="label-text">
-                    <h3><a href="'samples/single-post'">Vege Pizza</a></h3>
+                    <h3><a href="'samples/single-post'">Bat Man</a></h3>
                     <span class="text-category">$16.00</span>
                 </div>
             </div>          
@@ -58,16 +58,16 @@ is_hidden = 0
         <div class="col-md-3 col-sm-6 mix portfolio-item ginger">       
             <div class="portfolio-wrapper">                
                 <div class="portfolio-thumb">
-                    <img src="{{ 'assets/images/product2.jpg'|theme }}" alt="">
+                    <img src="{{ 'assets/images/book2.jpg'|theme }}" alt="">
                         <div class="hover">
                             <div class="hover-iner">
-                                <a class="fancybox" href="{{ 'assets/images/product2_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                                <span>Ginger</span>
+                                <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                                <span>Book</span>
                             </div>
                         </div>
                 </div>  
                 <div class="label-text">
-                    <h3><a href="'samples/single-post'">Ginger Tea</a></h3>
+                    <h3><a href="'samples/single-post'">The Art of Howies</a></h3>
                     <span class="text-category">$24.00</span>
                 </div>
             </div>          
@@ -75,16 +75,16 @@ is_hidden = 0
         <div class="col-md-3 col-sm-6 mix portfolio-item pizza">       
             <div class="portfolio-wrapper">                
                 <div class="portfolio-thumb">
-                    <img src="{{ 'assets/images/product3.jpg'|theme }}" alt="">
+                    <img src="{{ 'assets/images/book3.jpg'|theme }}" alt="">
                         <div class="hover">
                             <div class="hover-iner">
-                                <a class="fancybox" href="{{ 'assets/images/product3_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                                <span>Pizza</span>
+                                <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                                <span>DVD</span>
                             </div>
                         </div>
                 </div>  
                 <div class="label-text">
-                    <h3><a href="'samples/single-post'">Vege Green Salad</a></h3>
+                    <h3><a href="'samples/single-post'">Astrophysics for People</a></h3>
                     <span class="text-category">$12.00</span>
                 </div>
             </div>          
@@ -92,16 +92,16 @@ is_hidden = 0
         <div class="col-md-3 col-sm-6 mix portfolio-item pasta">       
             <div class="portfolio-wrapper">                
                 <div class="portfolio-thumb">
-                    <img src="{{ 'assets/images/product4.jpg'|theme }}" alt="">
+                    <img src="{{ 'assets/images/book4.jpg'|theme }}" alt="">
                         <div class="hover">
                             <div class="hover-iner">
-                                <a class="fancybox" href="{{ 'assets/images/product4_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                                <span>Pasta</span>
+                                <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                                <span>Book</span>
                             </div>
                         </div>
                 </div>  
                 <div class="label-text">
-                    <h3><a href="'samples/single-post'">Herbal Hot Tea</a></h3>
+                    <h3><a href="'samples/single-post'">Guantlet</a></h3>
                     <span class="text-category">$8.00</span>
                 </div>
             </div>          
@@ -109,16 +109,16 @@ is_hidden = 0
         <div class="col-md-3 col-sm-6 mix portfolio-item drink">       
             <div class="portfolio-wrapper">                
                 <div class="portfolio-thumb">
-                    <img src="{{ 'assets/images/product5.jpg'|theme }}" alt="">
+                    <img src="{{ 'assets/images/book5.jpg'|theme }}" alt="">
                         <div class="hover">
                             <div class="hover-iner">
-                                <a class="fancybox" href="{{ 'assets/images/product5_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Drink</span>
+                                <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>Book</span>
                         </div>
                 </div>
             </div>  
             <div class="label-text">
-                <h3><a href="'samples/single-post'">Fruit Salad</a></h3>
+                <h3><a href="'samples/single-post'">History of Humankind</a></h3>
                 <span class="text-category">$16.00</span>
             </div>
         </div>          
@@ -126,16 +126,16 @@ is_hidden = 0
     <div class="col-md-3 col-sm-6 mix portfolio-item hamburger">       
         <div class="portfolio-wrapper">                
             <div class="portfolio-thumb">
-                <img src="{{ 'assets/images/product6.jpg'|theme }}" alt="">
+                <img src="{{ 'assets/images/book6.jpg'|theme }}" alt="">
                     <div class="hover">
                         <div class="hover-iner">
-                            <a class="fancybox" href="{{ 'assets/images/product6_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Hamburger</span>
+                            <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>Book</span>
                         </div>
                     </div>
             </div>  
             <div class="label-text">
-                <h3><a href="'samples/single-post'">Big Hamburger</a></h3>
+                <h3><a href="'samples/single-post'">Go Girl</a></h3>
                 <span class="text-category">$8.00</span>
             </div>
         </div>          
@@ -143,16 +143,16 @@ is_hidden = 0
     <div class="col-md-3 col-sm-6 mix portfolio-item pizza">       
         <div class="portfolio-wrapper">                
             <div class="portfolio-thumb">
-                <img src="{{ 'assets/images/product7.jpg'|theme }}" alt="">
+                <img src="{{ 'assets/images/book7.jpg'|theme }}" alt="">
                     <div class="hover">
                         <div class="hover-iner">
-                            <a class="fancybox" href="{{ 'assets/images/product7_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Pizza</span>
+                            <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>DVD</span>
                         </div>
                     </div>
             </div>  
             <div class="label-text">
-                <h3><a href="'samples/single-post'">Chocolate Cake</a></h3>
+                <h3><a href="'samples/single-post'">Tim Winton</a></h3>
                 <span class="text-category">$14.00</span>
             </div>
          </div>          
@@ -160,16 +160,16 @@ is_hidden = 0
     <div class="col-md-3 col-sm-6 mix portfolio-item pasta">       
         <div class="portfolio-wrapper">                
             <div class="portfolio-thumb">
-                <img src="{{ 'assets/images/product8.jpg'|theme }}" alt="">
+                <img src="{{ 'assets/images/book8.jpg'|theme }}" alt="">
                     <div class="hover">
                         <div class="hover-iner">
-                            <a class="fancybox" href="{{ 'assets/images/product8_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Pasta</span>
+                            <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>Book</span>
                         </div>
                     </div>
             </div>  
             <div class="label-text">
-                <h3><a href="'samples/single-post'">Pizza Taste</a></h3>
+                <h3><a href="'samples/single-post'">Story for Boys</a></h3>
                 <span class="text-category">$15.00</span>
             </div>
         </div>          
@@ -177,16 +177,16 @@ is_hidden = 0
     <div class="col-md-3 col-sm-6 mix portfolio-item hamburger">       
         <div class="portfolio-wrapper">                
             <div class="portfolio-thumb">
-                <img src="{{ 'assets/images/product3.jpg'|theme }}" alt="">
+                <img src="{{ 'assets/images/book3.jpg'|theme }}" alt="">
                     <div class="hover">
                         <div class="hover-iner">
-                            <a class="fancybox" href="{{ 'assets/images/product3_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Hamburger</span>
+                            <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>Book</span>
                         </div>
                     </div>
             </div>  
             <div class="label-text">
-                <h3><a href="'samples/single-post'">Hot Meat Grilled</a></h3>
+                <h3><a href="'samples/single-post'">Astrophysics for People</a></h3>
                 <span class="text-category">$16.00</span>
             </div>
         </div>          
@@ -194,16 +194,16 @@ is_hidden = 0
     <div class="col-md-3 col-sm-6 mix portfolio-item drink">       
         <div class="portfolio-wrapper">                
 				<div class="portfolio-thumb">
-					<img src="{{ 'assets/images/product2.jpg'|theme }}" alt="">
+					<img src="{{ 'assets/images/book2.jpg'|theme }}" alt="">
                     <div class="hover">
                         <div class="hover-iner">
-                            <a class="fancybox" href="{{ 'assets/images/product2_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Drink</span>
+                            <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>Book</span>
                         </div>
                     </div>
 				</div>  
 				<div class="label-text">
-					<h3><a href="'samples/single-post'">New Ginger Taste</a></h3>
+					<h3><a href="'samples/single-post'">The Art of Howies</a></h3>
 					<span class="text-category">$18.00</span>
 				</div>
 			</div>          
@@ -211,16 +211,16 @@ is_hidden = 0
 		<div class="col-md-3 col-sm-6 mix portfolio-item ginger">       
 			<div class="portfolio-wrapper">                
 				<div class="portfolio-thumb">
-					<img src="{{ 'assets/images/product1.jpg'|theme }}" alt="">
+					<img src="{{ 'assets/images/book1.jpg'|theme }}" alt="">
                     <div class="hover">
                         <div class="hover-iner">
-                            <a class="fancybox" href="{{ 'assets/images/product1_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Ginger</span>
+                            <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>Book</span>
                         </div>
                     </div>
 				</div>  
 				<div class="label-text">
-					<h3><a href="'samples/single-post'">Hot Coffee</a></h3>
+					<h3><a href="'samples/single-post'">Bat Man</a></h3>
 					<span class="text-category">$16.00</span>
 				</div>
 			</div>          
@@ -228,32 +228,32 @@ is_hidden = 0
 		<div class="col-md-3 col-sm-6 mix portfolio-item pasta">       
 			<div class="portfolio-wrapper">                
 				<div class="portfolio-thumb">
-                <img src="{{ 'assets/images/product6.jpg'|theme }}" alt="">
+                <img src="{{ 'assets/images/book6.jpg'|theme }}" alt="">
                     <div class="hover">
                         <div class="hover-iner">
-                            <a class="fancybox" href="{{ 'assets/images/product6_big.jpg'|theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
-                            <span>Pasta</span>
+                            <a class="fancybox" href="{{ theme }}"><img src="{{ 'assets/images/open-icon.png'|theme }}" alt=""></a>
+                            <span>Book</span>
                         </div>
                     </div>
 				</div>  
 				<div class="label-text">
-					<h3><a href="'samples/single-post'">SUMMER FRUIT SALADE</a></h3>
+					<h3><a href="'samples/single-post'"Go Girl</a></h3>
 					<span class="text-category">$16.00</span>
 				</div>
 			</div>          
 		</div>
 	</div>
-		<div class="pagination">
-			<div class="row">   
-				<div class="col-md-12">
-					<ul>
-						<li><a href="#">1</a></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">>></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>     
+		<!-- <div class="pagination">
+		    <div class="row">   
+		        <div class="col-md-12">
+		            <ul>
+		                <li><a href="#">1</a></li>
+		                <li><a href="#">2</a></li>
+		                <li><a href="#">3</a></li>
+		                <li><a href="#">>></a></li>
+		            </ul>
+		        </div>
+		    </div>
+		</div>    -->  
     </div>
 </div>
