--- a/themes/jtherczeg-grill-child/pages/samples/single-post.htm
+++ b/themes/jtherczeg-grill-child/pages/samples/single-post.htm
@@ -2,9 +2,8 @@ title = "Blog"
 url = "/single-post"
 layout = "single-post"
 description = "Blog Single Post"
-meta_author = "templatemo and József Tamás Herczeg"
 meta_description = "Free restaurant theme by templatemo, converted for OctoberCMS"
-meta_keywords = "business, restaurant, blog, responsive, bootstrap"
+is_hidden = 0
 ==
 <div id="heading">
     <div class="container">
@@ -43,7 +42,7 @@ meta_keywords = "business, restaurant, blog, responsive, bootstrap"
                                 </div>
                                 <div class="product-content">
                                     <div class="product-title">
-                                        <h3>SWEET BREAKFAST CAKE</h3>
+                                        <h3>SELF‐REALISATION, PURPOSE & ACHIEVEMENT</h3>
                                          <span class="subtitle">4 comments</span>
                                     </div>
                                     <p>Morbi consectetur velit et est placerat volutpat. Aliquam lacus libero, iaculis sit amet ornare eu, bibendum convallis. Curabitur vel erat imperdiet, ultrices dui et, mattis arcu. Donec nisi velit, dignissim mollis erat vehicula, iaculis eleifend sem. Mauris non ultrices ante, id porta odio. Pellentesque eget egestas lorem. <a href="#">Nullam vitae</a> varius lorem, ac tristique justo. Cras placerat tempus pharetra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, an inceptos himenaeos. Morbi et feugiat justo. <br><br>Maecenas et ante eu sem viverra faucibus eget nec est. Aenean non felis diam. Praesent malesuada, lectus vel elementum tincidunt, sapien dolor interdum lacus, vel suscipit enim augue vel purus. Ut in augue mass. Etiam a leo at eros vehicula mattis. Aenean nec fringilla neque <a href="#">eget vulputate mi</a>. Aenean tincidunt elit sollicitudin libero hendrerit feugiat. Nunc purus leo, sollicitudin et vulputate vitae, auctor a lacus. Fusce aliquet erat quis nisi adipiscing, id eleifend quam venenatis. Integer non sem quis dui dignissim lacinia et a massa.</p>
